public/styles/style-bootstrap.css
/* ... */
#p10html2 thead {
    background-color: #AAA;
    font-weight: bold;
}

    #p10html2 thead tr {
        background-color: #AAA;
        font-weight: bold;
    }

    #p10html2 thead img {
        float: right;
        cursor: pointer;
        padding: 3px;
    }

#p10html2 .altBack {
    background-color: #DDD;
}

.mobileFileActionDropdown,
.mobileActionDropdown {
    display: none !important;
}

.pwState {
    display: table-cell;
    height: 16px;
}

.pwsYellow {
    background-color: yellow;
}

.pwsTransparent {
    background-color: #00000000;
}

.pwsBlack {
    background-color: var(--bs-body-color);
}

.pwsBlue {
    background-color: blue;
}

.pwsBlue2 {
    background-color: blue;
}

.pwsLightblue {
    background-color: lightblue;
}

.pwsBlueviolet {
    background-color: blueviolet;
}

.pwsDarkgreen {
    background-color: darkgreen;
}

.pwsLightseagreen {
    background-color: lightseagreen;
}

.pwsLightseagreen2 {
    background-color: lightseagreen;
}

.p10html3right {
    float: right;
    font-size: small;
}

.p10html3left {
    font-size: small;
}

.fulldesk #p11 {
    height: 100%;
}

#MainComputerImage {
    border-width: 0px;
    height: 200px;
    width: 200px;
}

#MainComputerState {
    font-size: 12px;
    font-weight: bold;
    width: 100%;
    text-align: center;
}

#d2netinfo .dialogText {
    padding-right: 10px;
}

#p12warning, #p12warning2, #p11warning, #p11warning2 {
    max-width: 100%;
    display: none;
    cursor: pointer;
    margin-bottom: 5px;
}

#MainMeshImage {
    border-width: 0px;
    height: 200px;
    width: 200px;
    float: right;
}

#DeskTools {
    position: absolute;
    width: 400px;
    height: 100%;
    background: var(--sub-menu-bg);
    top: 0;
    right: 0;
    border-left: 2px solid lightgray;
}

#DeskToolsRefreshButton {
    float: right;
    padding: 3px;
    cursor: pointer;
}

a {
    color: #036;
    text-decoration: underline;
    cursor: pointer;
}

.night a {
    color: #69B;
}

.i1 {
    background: url(../images/icons50.png) 0px 0px;
    background-image: image-set(url(../images/icons50.png) 1x, url(../images/icons100.png) 2x);
    height: 50px;
    width: 50px;
    cursor: pointer;
    border: none;
}

.i2 {
    background: url(../images/icons50.png) -50px 0px;
    background-image: image-set(url(../images/icons50.png) 1x, url(../images/icons100.png) 2x);
    height: 50px;
    width: 50px;
    cursor: pointer;
    border: none;
}

.i3 {
    background: url(../images/icons50.png) -100px 0px;
    background-image: image-set(url(../images/icons50.png) 1x, url(../images/icons100.png) 2x);
    height: 50px;
    width: 50px;
    cursor: pointer;
    border: none;
}

.i4 {
    background: url(../images/icons50.png) -150px 0px;
    background-image: image-set(url(../images/icons50.png) 1x, url(../images/icons100.png) 2x);
    height: 50px;
    width: 50px;
    cursor: pointer;
    border: none;
}

.i5 {
    background: url(../images/icons50.png) -200px 0px;
    background-image: image-set(url(../images/icons50.png) 1x, url(../images/icons100.png) 2x);
    height: 50px;
    width: 50px;
    cursor: pointer;
    border: none;
}

.i6 {
    background: url(../images/icons50.png) -250px 0px;
    background-image: image-set(url(../images/icons50.png) 1x, url(../images/icons100.png) 2x);
    height: 50px;
    width: 50px;
    cursor: pointer;
    border: none;
}

.i7 {
    background: url(../images/icons50.png) -300px 0px;
    background-image: image-set(url(../images/icons50.png) 1x, url(../images/icons100.png) 2x);
    height: 50px;
    width: 50px;
    cursor: pointer;
    border: none;
}

.i8 {
    background: url(../images/icons50.png) -350px 0px;
    background-image: image-set(url(../images/icons50.png) 1x, url(../images/icons100.png) 2x);
    height: 50px;
    width: 50px;
    cursor: pointer;
    border: none;
}

.j1 {
    background: url(../images/icons16.png) 0px 0px;
    background-image: image-set(url(../images/icons16.png) 1x, url(../images/icons32.png) 2x);
    height: 16px;
    width: 16px;
    cursor: pointer;
    border: none;
}

.j2 {
    background: url(../images/icons16.png) -16px 0px;
    background-image: image-set(url(../images/icons16.png) 1x, url(../images/icons32.png) 2x);
    height: 16px;
    width: 16px;
    cursor: pointer;
    border: none;
}

.j3 {
    background: url(../images/icons16.png) -32px 0px;
    background-image: image-set(url(../images/icons16.png) 1x, url(../images/icons32.png) 2x);
    height: 16px;
    width: 16px;
    cursor: pointer;
    border: none;
}

.j4 {
    background: url(../images/icons16.png) -48px 0px;
    background-image: image-set(url(../images/icons16.png) 1x, url(../images/icons32.png) 2x);
    height: 16px;
    width: 16px;
    cursor: pointer;
    border: none;
}

.j5 {
    background: url(../images/icons16.png) -64px 0px;
    background-image: image-set(url(../images/icons16.png) 1x, url(../images/icons32.png) 2x);
    height: 16px;
    width: 16px;
    cursor: pointer;
    border: none;
}

.j6 {
    background: url(../images/icons16.png) -80px 0px;
    background-image: image-set(url(../images/icons16.png) 1x, url(../images/icons32.png) 2x);
    height: 16px;
    width: 16px;
    cursor: pointer;
    border: none;
}

.j7 {
    background: url(../images/icons16.png) -96px 0px;
    background-image: image-set(url(../images/icons16.png) 1x, url(../images/icons32.png) 2x);
    height: 16px;
    width: 16px;
    cursor: pointer;
    border: none;
}

.j8 {
    background: url(../images/icons16.png) -112px 0px;
    background-image: image-set(url(../images/icons16.png) 1x, url(../images/icons32.png) 2x);
    height: 16px;
    width: 16px;
    cursor: pointer;
    border: none;
}

.relayIcon16 {
    background: url(../images/icon-relay.png);
    height: 16px;
    width: 16px;
    cursor: pointer;
    border: none;
}
/* ... */

